remove redundant api
